--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-gyp-build",
-  "version": "3.3.0",
+  "name": "@jimpick/node-gyp-build",
+  "version": "3.3.0-1",
   "description": "Build tool and bindings loader for node-gyp that supports prebuilds",
   "main": "index.js",
   "devDependencies": {
